style.css
/* ... */
#eventDetails .diseaseCube
{
	display: inline-block;
	width: 16px;
	height: 16px;
	margin-right: 3px;
	margin-bottom: 3px;
}
#eventDetails .cubes > * { vertical-align: middle }
#eventDetails .locatable:hover { text-decoration: underline }
#eventDetails .infectionCard
{
	font-size: 14px;
	margin-bottom: 8px;
}
#eventDetails .infectionCard .cityName
{
	top: 3px;
	white-space: nowrap;
	margin-left: 18%
}

#eventDetails .column
{
	display: inline-block;
	vertical-align: top;
}
#eventDetails .column:first-of-type p:first-of-type { margin-top: 18px; }
#eventDetails .column:last-of-type { padding-left: 2px }
#eventDetails .column:last-of-type p:first-of-type { border-bottom: 1px solid #fff }
#eventDetails .hand { padding: 5px 0 }
#eventDetails .populationRank
{
	font-size: 22px;
	position: absolute;
}

.indent-1,
#eventTypeTooltip li 
{ margin-left: 12px }
.indent-2 { margin-left: 30px }

#cureMarkerContainer
{
	width: 20.3%;
	left: 29.8%;
	border: none;
}
#cureMarkerContainer .title
{
	border-bottom: 1px solid #00a94f;
}
.cureMarker
{
	position: absolute;
	width: 6%;
	z-index: 2;
}
#cureMarkerY { margin-left: 29.65% }
#cureMarkerR { margin-left: 34.65% }
#cureMarkerU { margin-left: 39.64% }
#cureMarkerB { margin-left: 44.2% }
.bottomPanelDiv
{
	border-top: 1px solid #fff;
	border-left: 1px solid #fff;
	z-index: 2;
}
#researchStationSupply
{
	width: 16%;
	left: 52%;
}
#researchStationSupply .title
{
	margin-bottom: 6px;
}
#researchStationSupply > *:not(.title)
{
	vertical-align: middle;
}
#researchStationSupply .researchStation
{
	display: inline-block;
	width: 20%;
	margin-left: 5%;
}
.smallGlow, .mediumGlow, .bigGlow { transition: filter 0.5s }
.smallGlow { filter: drop-shadow(0px 0px 2px #fff) }
.mediumGlow { filter: drop-shadow(0px 0px 6px #fff) }
.bigGlow { filter: drop-shadow(0px 0px 10px #fff) }
#researchStationSupplyCount
{
	display: inline-block;
	color: #fff;
	margin-left: 31.5%;
}
#playerDeck
{
	width: 14%;
	left: 68%;
}
#playerDeck img
{
	width: 40%;
	margin: 5px 30% 0 30%;
}
#playerDiscard
{
	width: 18%;
	left: 82%;
	z-index: 7;
}
#removedPlayerCards
{
	border-top: 1px solid #fff;
	margin-top: 10px;
}
#topPanel
{
	width: 36%;
	left: 44%;
	overflow-y: hidden;
}
#topPanel > div
{
	padding-bottom: 2px;
	border-bottom: 1px solid #fff;
	border-left: 1px solid #fff;
}
#topPanel .title, #infectionDiscard .title, .bottomPanelDiv .title
{
	font-size: 16px;
	text-align: center;
	padding-top: 3px;
	border-bottom: 1px solid #fff;
}
#cubeSupplies { width: 56% }
#cubeSupplies .info
{
	font-size: 12px;
	vertical-align: text-top;
}
.cubeSupply
{
	display: inline-block;
	width: 25%;
}

.cubeSupply p, #researchStationSupplyCount
{
	font-family: 'B612 Mono', monospace;
}
.cubeSupply p
{
	font-size: 18px;
	text-align: center;
	margin-top: -3px;
}
.cubeSupply .diseaseCube
{
	width: 64%;
	margin: 0 18%;
}
#infectionDeck
{
	width: 44%;
}
#infectionDiscard
{
	position: absolute;
	left: 80%;
	width: 20%;
	background-color: #252525;
	border-left: 1px solid #fff;
	border-bottom: 1px solid #fff;
	overflow: hidden;
	z-index: 9;
}
#removedInfectionCards
{
	margin-top: 10px;
	border-top: 1px solid #fff;
}

#infDiscardVeil { position: absolute; background-color: #252525; z-index: 10;}
.infDiscardCardback, .forecastCardback
{
	position: absolute;
	width: 10.6%;
	opacity: 0.1;
}
#imgInfectionDeck
{
	z-index: 4;
	width: 36%;
	border-radius: 100%;
	margin: 1.5% 32% 0.5% 32%;
}
.drawnInfectionCard, .drawnPlayerCard {position: absolute;z-index: 10;}
.marker { position: absolute }
.marker > img { width: 100% }
#infectionRateMarker
{
	top: 18.4%;
	left: 63.96%;
	width: 3.15%;
}
.infectionRateHighlight, .outbreaksHighlight
{
	position: absolute;
	background-color: #000;
	z-index: 10;
	opacity: 0.5;
}
.infectionRateHighlight.top
{
	width: 100%;
	height: 17.8%;
}
.infectionRateHighlight.right
{
	top: 17.8%;
	height: 9.6%;
	left: 89.5%;
	width: 10.5%;
}
.infectionRateHighlight.left
{
	top: 17.8%;
	height: 9.6%;
	width: 63.6%;
}
.infectionRateHighlight.bottom
{
	width: 100%;
	top: 27.4%;
	height: 72.6%;
}
#outbreaksMarker
{
	transform: rotate(45deg);
	top: 54.4%;
	left: 2.8%;
	width: 3%;
}
.outbreaksHighlight.top
{
	width: 100%;
	height: 50.4%;
}
.outbreaksHighlight.right
{
	top: 50.4%;
	height: 49.6%;
	left: 10.3%;
	width: 89.7%;
}
.outbreaksHighlight.bottom
{
	top: 95%;
	height: 5%;
	width: 10.3%;
}
#outbreaksTrackHighlight
{
	position: absolute;
	z-index: 10;
	background-color: #8a181a;
	top: 50.4%;
	width: 10.3%;
	height: 44.6%;
}

#rightPanel, .infectionCardContents {width: 19.5%;}
#rightPanel
{
	float: right;
	border-left: 1px solid #fff;
}
.scrollable { overflow-y: scroll }
#indicatorContainer
{
	padding: 2px 7px;
	border-bottom: 2px solid #4ec6e1;
	background-color: #353535;
	border: none;
	overflow: hidden;
}
#indicatorContainer span:not(.roleTag, .disabled) {margin-left: 15px;}
#indicatorContainer
{
	text-align: center;
}
#indicatorContainer > * {margin-bottom: 4px}
#turnIndicator
{
	font-size: 16px;
}
#roleIndicator
{
	font-weight: 700;
	font-size: 20px;
	line-height: 24px;
	height: 26px;
}
#roleIndicator,
.playerPanel .role
{ font-family: 'Oswald', 'Electrolize', sans-serif }

.action:not(.step), .destination
{
	display: block;
	padding: 5px;
	border: 1px solid #4ec6e1;
	border-top: none;
}
.infectionStatus
{
	padding: 5px 0;
	text-align: center;
	background-color: #252525;
	border-bottom: 1px solid #fff;
	border-left: 1px solid #fff;
}
.infectionStatus p:first-of-type{font-size: 22px;}
.groupInfRate
{
	display: inline-block;
	width: 100%;
	margin: 8px 0;
	padding: 0;
}
.infectionCard
{
	width: 100%;
	margin-bottom: 5px;
}
#infectCitiesContainer > .infectionCard, #infectCitiesContainer > .btnContinue { margin-top: 20px }
.infectionCardContents { position: relative }
.infectionCard *
{
	position: absolute;
	pointer-events: none;
}
.infectionCardImg
{
	width: 100%;
}
.cityName
{
	margin-left: 20%;
	color: #000;
	font-family: 'Audiowide', 'Electrolize', sans-serif;
	font-weight: 700;
}
/* ... */

